# OpenMarketIQ

./: .gitignore  LICENSE  README.md  get_cost.py  get_cost_api.py  get_cost_api_wrapper.py  mkdocs.yml  package-lock.json  pyproject.toml  run.py
docs/: index.md  usage.md
get-cost-frontend/: package-lock.json  package.json  tailwind.config.js
get-cost-frontend/public/: index.html  manifest.json
get-cost-frontend/src/: App.css  App.tsx  react-app-env.d.ts  serviceWorkerRegistration.ts
openmarketiq/: api.py
