[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openmarketiq"
version = "0.1.0"
description = "A Python client for fetching item cost and citation using the Perplexity API."
authors = [
    { name="Your Name", email="your@email.com" }
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "requests>=2.25.1"
]
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/yourusername/openmarketiq" 